# ink

./: .bazelrc  .gitignore  BUILD  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  bazel_build.sh  fuzztest.bazelrc  ndk_build.sh
ink/brush/: BUILD.bazel  brush.cc  brush.h  brush_behavior.cc  brush_behavior.h  brush_behavior_test.cc  brush_coat.cc  brush_coat.h  brush_coat_test.cc  brush_family.cc  brush_family.h  brush_family_test.cc  brush_paint.cc  brush_paint.h  brush_paint_test.cc  brush_test.cc  brush_tip.cc  brush_tip.h  brush_tip_test.cc  color_function.cc  color_function.h  color_function_test.cc  easing_function.cc  easing_function.h  easing_function_test.cc  fuzz_domains.cc  fuzz_domains.h  fuzz_domains_test.cc  stock_brushes.cc  stock_brushes.h  stock_brushes_test.cc  stock_brushes_test_params.cc  stock_brushes_test_params.h  type_matchers.cc  type_matchers.h  version.h
ink/brush/internal/: brush_family_internal_accessor.h
ink/color/: BUILD.bazel  color.cc  color.h  color_helpers.h  color_helpers_test.cc  color_space.cc  color_space.h  color_space_test.cc  color_test.cc  fuzz_domains.cc  fuzz_domains.h  type_matchers.cc  type_matchers.h
ink/geometry/: BUILD.bazel  affine_transform.cc  affine_transform.h  affine_transform_test.cc  angle.cc  angle.h  angle_test.cc  convex_hull.h  convex_hull_test.cc  distance.cc  distance.h  distance_test.cc  envelope.cc  envelope.h  envelope_test.cc  fuzz_domains.cc  fuzz_domains.h  intersects.cc  intersects.h  intersects_test.cc  mesh.cc  mesh.h  mesh_format.cc  mesh_format.h  mesh_format_test.cc  mesh_index_types.h  mesh_packing_types.cc  mesh_packing_types.h  mesh_packing_types_test.cc  mesh_test.cc  mesh_test_helpers.cc  mesh_test_helpers.h  mesh_test_helpers_test.cc  modeled_shape.cc  modeled_shape.h  modeled_shape_test.cc  mutable_mesh.cc  mutable_mesh.h  mutable_mesh_benchmark.cc  mutable_mesh_test.cc  (+32 more)
ink/geometry/internal/: BUILD.bazel  algorithms.cc  algorithms.h  algorithms_test.cc  circle.cc  circle.h  circle_test.cc  convex_hull_helper.h  generic_tessellator.h  generic_tessellator_test.cc  intersects_internal.cc  intersects_internal.h  legacy_segment_intersection.cc  legacy_segment_intersection.h  legacy_segment_intersection_test.cc  legacy_triangle_contains.cc  legacy_triangle_contains.h  legacy_triangle_contains_test.cc  legacy_vector_utils.cc  legacy_vector_utils.h  legacy_vector_utils_test.cc  lerp.cc  lerp.h  lerp_test.cc  mesh_constants.h  mesh_packing.cc  mesh_packing.h  mesh_packing_test.cc  modulo.cc  modulo.h  modulo_test.cc  outline_processing.cc  outline_processing.h  outline_processing_test.cc  point_tessellation_helper.h  polyline_processing.cc  polyline_processing.h  polyline_processing_test.cc  static_rtree.cc  static_rtree.h  (+4 more)
ink/geometry/testdata/: BUILD.bazel  spring_shape_mesh.binarypb  straight_line_mesh.binarypb
ink/jni/: BUILD.bazel  exported_symbols.txt  jni.lds  jni_onload.cc
ink/jni/internal/: BUILD.bazel  jni_buffer_util.cc  jni_buffer_util.h  jni_defines.h  jni_jvm_interface.cc  jni_jvm_interface.h  jni_proto_util.cc  jni_proto_util.h  jni_string_util.cc  jni_string_util.h  jni_throw_util.cc  jni_throw_util.h  status_jni.cc  status_jni_helper.cc  status_jni_helper.h  status_native.cc  status_native.h
ink/kmp/: BUILD.bazel  ink_combine_headers.bzl
ink/rendering/: BUILD.bazel  bitmap.cc  bitmap.h  bitmap_test.cc  fuzz_domains.cc  fuzz_domains.h  texture_bitmap_store.h
ink/rendering/common/: BUILD.bazel
ink/rendering/webgpu/: BUILD.bazel  StrokeShader.wgsl
ink/storage/: BUILD.bazel  bitmap.cc  bitmap.h  bitmap_test.cc  brush.cc  brush.h  brush_provider.cc  brush_provider.h  brush_provider_test.cc  brush_test.cc  color.cc  color.h  color_test.cc  input_batch.cc  input_batch.h  input_batch_test.cc  mesh.cc  mesh.h  mesh_format.cc  mesh_format.h  mesh_format_test.cc  mesh_test.cc  mesh_vertices.cc  mesh_vertices.h  mesh_vertices_test.cc  numeric_run.cc  numeric_run.h  numeric_run_test.cc  partitioned_mesh.cc  partitioned_mesh.h  partitioned_mesh_test.cc  proto_matchers.cc  proto_matchers.h  stroke_input_batch.cc  stroke_input_batch.h  stroke_input_batch_test.cc
ink/storage/proto/: BUILD.bazel  README.md  bitmap.proto  brush.proto  brush_family.proto  coded.proto  coded_numeric_run.proto  color.proto  incremental_stroke_inputs.proto  mesh.proto  options.proto  stroke_input_batch.proto
ink/strokes/: BUILD.bazel  in_progress_stroke.cc  in_progress_stroke.h  in_progress_stroke_test.cc  stroke.cc  stroke.h  stroke_benchmark.cc  stroke_test.cc
ink/strokes/input/: BUILD.bazel  fuzz_domains.cc  fuzz_domains.h  recorded_test_inputs.cc  recorded_test_inputs.h  recorded_test_inputs_data.cc  recorded_test_inputs_data.h  recorded_test_inputs_test.cc  stroke_input.cc  stroke_input.h  stroke_input_batch.cc  stroke_input_batch.h  stroke_input_batch_iterator_test.cc  stroke_input_batch_test.cc  stroke_input_batch_transform_test.cc  stroke_input_test.cc  synthetic_test_inputs.cc  synthetic_test_inputs.h  synthetic_test_inputs_test.cc  type_matchers.cc  type_matchers.h
ink/strokes/internal/: BUILD.bazel  brush_tip_extruder.cc  brush_tip_extruder.h  brush_tip_extruder_test.cc  brush_tip_extrusion.cc  brush_tip_extrusion.h  brush_tip_extrusion_test.cc  brush_tip_modeler.cc  brush_tip_modeler.h  brush_tip_modeler_benchmark.cc  brush_tip_modeler_helpers.cc  brush_tip_modeler_helpers.h  brush_tip_modeler_helpers_test.cc  brush_tip_modeler_test.cc  brush_tip_shape.cc  brush_tip_shape.h  brush_tip_shape_test.cc  brush_tip_state.cc  brush_tip_state.h  brush_tip_state_test.cc  circular_extrusion_helpers.cc  circular_extrusion_helpers.h  circular_extrusion_helpers_test.cc  constrain_brush_tip_extrusion.cc  constrain_brush_tip_extrusion.h  easing_implementation.cc  (+45 more)
ink/types/: BUILD.bazel  duration.cc  duration.h  duration_test.cc  fuzz_domains.cc  fuzz_domains.h  iterator_range.h  iterator_range_test.cc  numbers.h  physical_distance.cc  physical_distance.h  physical_distance_test.cc  small_array.h  small_array_test.cc  type_matchers.cc  type_matchers.h  uri.cc  uri.h  uri_test.cc
(+949 files in other folders)
